--- a/Typewriters/typewiter.html
+++ b/Typewriters/typewiter.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="type.css" />
   </head>
-  <body></body>
+  <body>
+    <p class="line-1 anim-typewriter">
+      Four seasons</span>
+    </p>
+  </body>
 </html>
