Different position Fourseason typeout

--- a/Typewriters/FourSeasons_Typeout/index.html
+++ b/Typewriters/FourSeasons_Typeout/index.html
@@ -8,9 +8,10 @@
     <title>Type out seasons</title>
   </head>
   <body>
-    <h1 id="typewriter"></h1>
-
-    <script src="dist/core.js"></script>
-    <script src="script.js"></script>
+    <div class="typeParent">
+      <h1 id="typewriter"></h1>
+      <script src="dist/core.js"></script>
+      <script src="script.js"></script>
+    </div>
   </body>
 </html>
