--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       <p id="textBlowAway"></p>
       <p id="textFadeIn">The fields are rich with daffodils</p>
       <p id="textFadeUp">A coat of clover cloaks the hills</p>
-      <p id="textFadeUpTest">A coat of clover cloaks the hills</p>
+      <div class="thickWinterDiv">
+        <p id="thickWinter1"></p>
+        <p id="thickWinter2"></p>
+        <p id="thickWinter3"></p>
+        <p id="thickWinter4"></p>
+        <p id="thickWinter5"></p>
+      </div>
     </div>
     <div class="scene">
       <div class="text"></div>
